[tool.poetry]
name = "2hc2022"
version = "0.1.0"
description = ""
authors = ["nahco314 <nahco3_ta@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^2.8.8"
numexpr = "^2.8.4"
numpy = "^1.24.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
